--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
           - {compiler: intel, version: '2023.2'}
           - {compiler: intel-classic, version: '2021.10'}
           - {compiler: nvidia-hpc, version: '23.11'}
+          - {compiler: lfortran, version: '0.30.0'}
         exclude:
         # ifx not available for mac
         - os: macos-13
@@ -160,6 +161,7 @@ jobs:
           - {compiler: nvidia-hpc, version: '20.11'}
           - {compiler: nvidia-hpc, version: '20.9'}
           - {compiler: nvidia-hpc, version: '20.7'}
+          - {compiler: lfortran, version: '0.30.0'}
         exclude:
           # ifx not available for mac
           - os: macos-13
